# DevrecAI_PBA

./: DevRecAI_master_prompt.json  HOW_IT_WORKS.txt  README.md  pyproject.toml
devrecai/: __init__.py
devrecai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
devrecai/cli/: __init__.py  main.py
devrecai/config/: __init__.py  settings.py
devrecai/data/: tools.json
devrecai/data/model/: .gitkeep
devrecai/data/training/: seed_dataset.csv
devrecai/engine/: __init__.py  ml_scorer.py  rules.py  scorer.py  tools_db.py
devrecai/export/: __init__.py  markdown.py  pdf.py
devrecai/llm/: __init__.py  client.py  explainer.py  prompts.py
devrecai/storage/: __init__.py  db.py  sessions.py
devrecai/tui/: __init__.py  app.py
devrecai/tui/animations/: __init__.py  boot_animation.py  jarvis_animation.py
devrecai/tui/screens/: __init__.py  boot.py  comparison.py  config_screen.py  export_screen.py  feedback.py  history.py  home.py  input_wizard.py  jarvis_screen.py  processing.py  results.py
devrecai/tui/widgets/: __init__.py  retro_progress.py  score_table.py  spinner.py
tests/: __init__.py  test_llm_client.py  test_scorer.py  test_storage.py
